# GarbageCollector2

./: .gitignore  Cargo.toml  README.md  build.sh  shell.nix
Assets/Levels/: 0.ron  1.ron  3.ron
GC2AsciiArt/: asciiart.py  shell.nix
html/: garbage_collector2.d.ts  garbage_collector2.js  garbage_collector2_bg.wasm  garbage_collector2_bg.wasm.d.ts  index.html
src/: assets.rs  level.rs  main.rs  player.rs
src/gclang/: bash.gc  executor.rs  gcstd.rs  mod.rs  parser.rs  std.rs
src/gclang/programs/: bash.gc  curses.gc  edit.gc  gcsh.gc  ls.gc  neofetch.gc  sh.gc  sl.gc  systemctl.gc
