[package]
name = "garbage_collector2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bidivec = "0.1.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
laps = { version = "0.1.2", features = ["macros"] }
map-macro = "0.2.6"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
speedy2d = { git = "https://github.com/InfiniteCoder01/Speedy2D.git", branch = "master" }
